Thu Mar  9 13:11:39 2000  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.man, setpci.man: Revealed --version. Well spotted
	by Adam Sulmicki.

	* pci.ids: Added lots of new ID's and synced with 2.3.50.

Tue Feb 15 00:16:21 2000  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 2.1.5.

	* pciutils.spec: Updated spec file from Andreas Jaeger. Now using
	%{_mandir} to find the right location to install manual pages to.

	* pci.ids: New ID's.

	* setpci.c (main): Don't crash when `-s' or `-d' is given with
	no argument.

Mon Jan 24 20:04:11 2000  Andreas Jaeger  <aj@suse.de>

	* lib/i386-ports.c: Include <asm/io.h> only on systems without
	glibc.

Mon Jan 24 11:24:43 2000  Martin Mares  <mj@albireo.ucw.cz>

	* Makefile: Modified to work with the Linux FHS brain-damaged idea
	of putting man pages to /usr/share/man. Now we choose either /usr/man
	or /usr/share/man depending on which one exists.

Sun Jan 23 10:52:34 2000  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: Synced with Linux 2.3.40.

	* Released as version 2.1.4.

Thu Jan 20 11:08:32 2000  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (scan_device): Fixed bug in reading of cardbus extensions.

	* lib/proc.c: pread/pwrite fixed again, this time on libc5 :(

	* lspci.c (format_agp_rate): Better formatting of AGP rates.

	* pci.ids: New ID's.

	* lib/configure: Added configuration for ia64 (the same as for Alpha).
	Patch from Stephane Eranian <eranian@cello.hpl.hp.com>.

Thu Jan 13 23:01:52 2000  Martin Mares  <mj@albireo.ucw.cz>

	* Released as version 2.1.3.

	* pci.ids: New ID's.

	* lspci.c: Alpha IO_FORMAT fix by Andrea Arcangeli.

	* lib/access.c: Corrected order of access methods -- it's wonderful how
	long could such a bug remain unspotted. Thanks go to Andreas Schockenhoff.

Sat Dec 11 23:34:48 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Released as version 2.1.2.

	* lib/names.c (pci_lookup_name): Fixed printing of unknown subsystem ID's.

Sat Dec  4 13:11:03 1999  Martin Mares  <mj@albireo.ucw.cz>
